<resources>
    <string name="app_name">TP2INF8405</string>
    <string name="title_activity_maps">Maps</string>
    <string name="maps_logo">App Logo</string>
    <string name="about_member1">Dinh Huân Philippe Duong</string>
    <string name="about_member2">Yassine Belkacemi</string>
    <string name="about_member3">Simon Moreau</string>
    <string name="about_member4">Aladji Faye</string>
    <string name="about_group">Groupe 01</string>
    <string name="about_version">Version 1.0.0</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="true">Premier Fragment</string>
    <string name="second_fragment_label" translatable="true">Second Fragment</string>
    <string name="next" translatable="true">Prochain</string>
    <string name="previous" translatable="true">Précedent</string>
    <string name="profileBtn" translatable="true">Profile</string>
    <string name="swapThemeBtn" translatable="true">Changement de Thème</string>
    <string name="userNotInDB" translatable="true">Cet utilisateur n\'existe pas.</string>
    <string name="userAlreadyInDB" translatable="true">Cet utilisateur existe déjà. Veuillez choisir un autre nom.</string>
    <string name="profileUsername" translatable="true">Nom d\'utilisateur: </string>
    <string name="createAccountValidate" translatable="true">Valider</string>
    <string name="configChangePFP" translatable="true">Changer la photo de profil</string>
    <string name="foundDevicesInfo" translatable="true">Dispositifs trouvés à :</string>

    <string name="hello_first_fragment" translatable="true">Bonjour premier fragment</string>
    <string name="hello_second_fragment" translatable="true">Bonjour second fragment. Arg: %1$s</string>
    <string name="batteryLevel" translatable="true">Batterie: </string>
    <string name="UplinkVal" translatable="true">Téléversement: </string>
    <string name="DownlinkVal" translatable="true">Téléchargement: </string>
    <string name="title_activity_main_view" translatable="true">MainView</string>
    <string name="LanguageSelect" translatable="true">Afficher en anglais</string>
    <string name="Profile" translatable="true">Profil</string>
    <string name="homePage" translatable="true">Page d\'accueil</string>
    <string name="connect" translatable="true">Se connecter</string>
    <string name="createAccount" translatable="true">Créer un compte</string>
    <string name="lightVal" translatable="true">Lumière: </string>
    <string name="x_acc">accélération axe x:</string>
    <string name="y_acc">accélération axe y:</string>
    <string name="z_acc">accélération axe z:</string>
    <string name="bluetooth_off_message">Le bluetooth est désactivé. Vous avez besoin de le réactiver pour découvrir des périphériques alentour.</string>
    <string name="gps_enable_prompt" translatable="true">Votre GPS est désactivé, voulez-vous l\'activer?</string>
    <string name="yes" translatable="true">Oui</string>
    <string name="no" translatable="true">Non</string>
    <string name="device_unknown" translatable="true">Inconnu</string>
    <string name="device_classic" translatable="true">Classique</string>
    <string name="device_low_energy" translatable="true">Énergie Faible</string>
    <string name="device_dual" translatable="true">Double</string>

    <string name="device_full_info" translatable="true">Informations complètes: </string>
    <string name="device_name_info" translatable="true">Nom: </string>
    <string name="device_alias_info" translatable="true">Alias: </string>
    <string name="device_macAddr_info" translatable="true">Adresse MAC: </string>
    <string name="device_type_info" translatable="true">Type de l\'appareil: </string>

    <string name="add_favorite_option" translatable="true">Ajouter aux favoris</string>
    <string name="remove_favorite_option" translatable="true">Retirer des favoris</string>
    <string name="share_option" translatable="true">Partager</string>
    <string name="direction_option" translatable="true">Comment y aller</string>

</resources>